--- a/Assignment1/ReadMe
+++ b/Assignment1/ReadMe
@@ -1,1 +1,3 @@
-This is the assignment 1 for bah blah and this is the link.
+This assignment is to complete entire data engineer process with a Kaggle Dataset and create a medium article with all th eobservations.
+
+Medium article published - https://medium.com/@hasurkarshivam/analyzing-factors-that-affect-the-popularity-of-youtube-videos-in-india-with-the-power-of-chatgpt-4-d087756e8a38
