--- a/Assignment2/Readme
+++ b/Assignment2/Readme
@@ -52,4 +52,4 @@ Start the Tkinter event loop.
 3. Add multiplayer support over a network.
 
 I have used gpt-engineer - https://github.com/AntonOsika/gpt-engineer to generate the basic code and then imporvise the code with help of Github co-pilot and ChatGPT-4.
-Video link - With the process of how I built this project entirely ()
+Video link - With the process of how I built this project entirely (https://drive.google.com/file/d/1dOz-P7NiOv_H8wsZHtW6mxu0iAUE0aEn/view?usp=drivesdk)
